# cppSwarmLib

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md
Examples/AntAlgorithm/: main.cpp
Examples/SwarmOfParticles/: StopCriteria.hpp  SwarmOfParticles.hpp  UnitParticl.hpp  VectorsOp.hpp  example.cpp  m.cpp
Examples/SwarmOfParticles/Tests/: TestSwarmOfParticles.cpp  TestUnitParticl.cpp
src/: CMakeLists.txt  Logger.hpp  Params.hpp  Random.hpp  Swarm.hpp  SwarmUnit.cpp  SwarmUnit.hpp  tests.cpp
src/Tasks/: ITask.cpp  ITask.hpp  Tests.cpp
src/Tests/: LoggerTests.cpp  SwarmContainerTest.cpp  TasksTests.cpp
src/UnitComponent/: ICommunicationC.cpp  ICommunicationC.hpp  IExecutorC.cpp  IExecutorC.hpp  ITaskManagerC.cpp  ITaskManagerC.hpp  IUnitComponent.cpp  IUnitComponent.hpp
swarmlib2test/swarmlib/: Agent.hpp  Component.hpp  Swarm.hpp  main.cpp  test.cpp
